--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#firebase
+.firebase/hosting.ZGlzdFxnYWxlcmlhLWZvdG9z.cache
+.firebaserc
+firebase.json
